--- a/docs-dev/module-TriggerTypes.html
+++ b/docs-dev/module-TriggerTypes.html
@@ -768,7 +768,7 @@
 
         <tr>
             
-                <td class="name"><code>Triggered</code></td>
+                <td class="name"><code>Tripped</code></td>
             
 
             <td class="type">
